@@ -55,7 +55,7 @@
   <AT_IncreasedviabilitySurgery.discoveredLetterTitle>About: Increased viability Surgery</AT_IncreasedviabilitySurgery.discoveredLetterTitle>
   <AT_IncreasedviabilitySurgery.discoveredLetterText>Now you can surgery to increase the viability by injecting Refleum into the body of Anties.\n\nRefleum and Aphid extract are required for surgery.</AT_IncreasedviabilitySurgery.discoveredLetterText>
   <AT_Dreadnought_metamorphosisSurgery.label>Dreadnought metamorphosis</AT_Dreadnought_metamorphosisSurgery.label>
-  <AT_Dreadnought_metamorphosisSurgery.description>Research for surgery to obtain a huge and strong body using Transition Refleum.\n\nSurgery requires Aphid extract, Nutritional jelly, and Transition Refleum.\n\nThe Transition Refleum is can be extracted by treating Increased viability side effects.</AT_Dreadnought_metamorphosisSurgery.description>
+  <AT_Dreadnought_metamorphosisSurgery.description>Research for surgery to obtain a huge and strong body using Transition Refleum.\n\nSurgery requires Aphid extract, Nutritional jelly, and Transition Refleum.\n\nThe Transition Refleum is can be extracted by Remove Transition Refleum surgery for Increased viability side effects.</AT_Dreadnought_metamorphosisSurgery.description>
   <AT_Dreadnought_metamorphosisSurgery.discoveredLetterTitle>About: metamorphosis</AT_Dreadnought_metamorphosisSurgery.discoveredLetterTitle>
-  <AT_Dreadnought_metamorphosisSurgery.discoveredLetterText>Now you can surgery to obtain a huge and strong body using Transition Refleum.\n\nSurgery requires Aphid extract, Nutritional jelly, and Transition Refleum.\n\nThe Transition Refleum is can be extracted by treating Increased viability side effects.</AT_Dreadnought_metamorphosisSurgery.discoveredLetterText>
+  <AT_Dreadnought_metamorphosisSurgery.discoveredLetterText>Now you can surgery to obtain a huge and strong body using Transition Refleum.\n\nSurgery requires Aphid extract, Nutritional jelly, and Transition Refleum.\n\nThe Transition Refleum is can be extracted by Remove Transition Refleum surgery for Increased viability side effects.</AT_Dreadnought_metamorphosisSurgery.discoveredLetterText>
 </LanguageData>
