@@ -75,8 +75,8 @@
   <AT_IncreasedviabilitySurgery.discoveredLetterText>수술에는 리플리움과 진액이 필요합니다.</AT_IncreasedviabilitySurgery.discoveredLetterText>
 
   <AT_Dreadnought_metamorphosisSurgery.label>드레드노트 변태</AT_Dreadnought_metamorphosisSurgery.label>
-  <AT_Dreadnought_metamorphosisSurgery.description>변이 리플리움을 이용해서 거대하고 강인한 육체를 얻는 수술을 연구합니다.\n\n수술에는 진액과 영양젤리, 변이 리플리움이 필요합니다.\n\n변이 리플리움은 생존력 증대수술을 받은 앤티의 부작용을 치료하여 추출할 수 있습니다.</AT_Dreadnought_metamorphosisSurgery.description>
+  <AT_Dreadnought_metamorphosisSurgery.description>변이 리플리움을 이용해서 거대하고 강인한 육체를 얻는 수술을 연구합니다.\n\n수술에는 진액과 영양젤리, 변이 리플리움이 필요합니다.\n\n변이 리플리움은 생존력 증대수술을 받은 앤티의 부작용에 변이 리플리움 제거 수술을 적용하여 추출할 수 있습니다.</AT_Dreadnought_metamorphosisSurgery.description>
   <AT_Dreadnought_metamorphosisSurgery.discoveredLetterTitle>정보: 드레드노트 변태</AT_Dreadnought_metamorphosisSurgery.discoveredLetterTitle>
-  <AT_Dreadnought_metamorphosisSurgery.discoveredLetterText>이제 당신은 앤티들을 드레드노트로 변태시킬 수 있습니다.\n\n수술에는 진액과 영양젤리, 변이 리플리움이 필요합니다.\n\n변이 리플리움은 생존력 증대수술을 받은 앤티의 부작용을 치료하여 추출할 수 있습니다.</AT_Dreadnought_metamorphosisSurgery.discoveredLetterText>
+  <AT_Dreadnought_metamorphosisSurgery.discoveredLetterText>이제 당신은 앤티들을 드레드노트로 변태시킬 수 있습니다.\n\n수술에는 진액과 영양젤리, 변이 리플리움이 필요합니다.\n\n변이 리플리움은 생존력 증대수술을 받은 앤티의 부작용에 변이 리플리움 제거 수술을 적용하여 추출할 수 있습니다.</AT_Dreadnought_metamorphosisSurgery.discoveredLetterText>
 
 </LanguageData>
